--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
+<div class="container create-task">
+  <input type="text" class="create-task__input" placeholder="Add new task" [(ngModel)]="newTask">
+  <button type="button" class="create-task__btn" (click)="addNewTask()">Add</button>
+</div>
 <div class="container">
   <app-task
     *ngFor="let task of tasks; let i = index"
