--- a/src/app/task/task.component.css
+++ b/src/app/task/task.component.css
@@ -7,8 +7,8 @@
 }
 
 .task__text {
-  margin: 0 10px 0 0;
-  padding: 7px 5px 5px 5px;
+  margin: 0 10px 0 5px;
+  padding: 9px 5px 5px 5px;
   border: none;
   border-bottom: 2px solid transparent;
   outline: none;
@@ -23,4 +23,9 @@
 .task__delete {
   padding: 5px 10px;
   cursor: pointer;
+}
+
+.task__checkbox {
+  width: 20px;
+  height: 20px;
 }
